	length 2 for anisotropic surfaces (`isotropic = FALSE`).

	 - The number of locations in each ordination dimension at which the
	fitted surface is evaluated can now be specified via new argument
	`npoints`.

	 - The formula passed to `gam` is now built in greater detail. When
	the model is printed the user can see exactly how the smoother was
	constructed.

Version 2.1-28 (closed April 19, 2013)

	* betadisper: failed with type = "centroid" when there was only
	one group (i.e., in estimating the overall beta diversity in the
	data). Reported by Pierre Legendre.

	Now correctly reports distance to "medoid" in the print method
	when type = "median". Reported by Pierre Legendre. The print
	method also now shows only the first 8 eigenvalues.

	* eigenvals: new method for class "betadisper".

	* rda: eigenvalues are now regarded as zero if they are very small
	compared to the first eigenvalue. Earlier we used fixed limit of
	1e-4, but now the limit is first eigenvalues * 1e-5. Similar
	change was not made in cca, since there the theoretical maximum of
	the eigenvalue is 1, and comparison to an absolute minimum
	threshold of 1e-4 makes sense.
	
Version 2.1-27 (closed March 17, 2013)

	* cca/rda/capscale: removed references to 'u.eig' and 'v.eig'
	items in support functions. These now use 'u' and 'v' items and
	scale these with 'eig' (or diag(sqrt(eig))) when needed. This
	prepares for removing items 'u.eig', 'v.eig' and 'wa.eig' in vegan
	2.3 and 2.4. Concerns fitted.capscale, goodness.cca and
	goodness.rda. The documentation has warned about removing these
	*.eig items for years, and most vegan functions already avoided
	using them. We have no idea if any external packages depend on
	these and therefore we delay the removal till vegan 2.3 and 2.4
	release. However, we warn about this in NEWS for 2.0-7 and also
	say this clearly in cca.object documentation.

	* nestedtemp: function failed if the matrix fill was < 0.38%,